# hyperstudy-pythonsdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  sync-release-notes.yml  test.yml
docs/superpowers/specs/: 2026-04-10-recording-downloads-design.md
src/hyperstudy/: __init__.py  _dataframe.py  _display.py  _downloads.py  _http.py  _pagination.py  _types.py  client.py  exceptions.py  experiments.py  models.py  personas.py
tests/: conftest.py  test_agent_data.py  test_client.py  test_dataframe.py  test_deployments_write.py  test_downloads.py  test_experiments.py  test_http.py  test_models.py  test_pagination.py  test_personas.py  test_recordings_download.py
tests/fixtures/: agent_decision_detail_response.json  agent_decisions_response.json  agent_decisions_truncated_response.json  agent_runs_response.json  deployment_sessions_response.json  deployment_single_response.json  deployments_list_response.json  error_401.json  error_403.json  events_response.json  experiment.schema.json  experiment_single_response.json  experiments_list_response.json  paginated_page1.json  paginated_page2.json  pre_experiment_response.json  recordings_response.json  sparse_ratings_response.json  warnings_response.json
